fix alignment issues

--- a/src/app/css/assign.component.css
+++ b/src/app/css/assign.component.css
@@ -678,6 +678,12 @@ h3{
   border:0;
 }
 
-.align--right{
+.info-table-cell--money{
   text-align: right;
+}
+
+.info-table__row > td:first-child {
+  width: 70px;
+  text-align: left;
+  padding-left: 10px;
 }
